# atop

./: .gitignore  LICENSE  README.md  pyproject.toml
atop/: __init__.py  config.py  explainer.py  registry.py  utils.py
atop/attribution/: ig.py  saliency.py
atop/baselines/: lace.py
atop/explain/: attention_flow.py  figures.py  label_utils.py  matching.py  validation.py
atop/mining/: patterns.py
atop/models/: single_stream_transformer.py  training.py
scripts/: build_ndc_rxnorm_map.py  compare_baselines.py  compute_table1_full_cohort.py  extract_placeholders.py  infer_test.py  jamia_final_edits.py  precompute_lace.py  prepare_jamia_submission.py  preprocess.py  regen_tensors_test.py  replot.py  replot_fig2.py  replot_fig2_redesign.py  replot_validation.py  reproduce_lace_baselines.py  run_atop.py  sensitivity_ig_threshold.py  train_model.py
